# BookRoom

./: CMakeLists.txt
include/business/: authservice.h  authservice.hpp  reservationservice.h  reservationservice.hpp  roomservice.h  roomservice.hpp  userservice.h  userservice.hpp
include/core/converters/: reservation_converter.h  reservation_converter.hpp  room_converter.h  room_converter.hpp  user_converter.h  user_converter.hpp
include/core/database/: jsondb.h  jsondb.hpp  operation_builder.h  operation_builder.hpp
include/core/entities/: common.h  common.hpp  reservation.h  reservation.hpp  room.h  room.hpp  user.h  user.hpp
include/menus/: admin_staff_menu.h  admin_staff_menu.hpp  login_menu.h  login_menu.hpp  menu.hpp  researcher_menu.h  researcher_menu.hpp  system_admin_menu.h  system_admin_menu.hpp
src/: main.cpp
src/business/: authservice.cpp  authsrevice.cpp  reservationservice.cpp  roomservice.cpp  userservice.cpp
src/core/converters/: reservation_converter.cpp  reservation_converter.hpp  room_converter.cpp  room_converter.hpp  user_converter.cpp  user_converter.hpp
src/core/database/: jsondb.cpp  operation_builder.cpp
src/core/entities/: reservation.cpp  room.cpp  user.cpp
src/menus/: admin_staff_menu.cpp  login_menu.cpp  menu.cpp  researcher_menu.cpp  system_admin_menu.cpp
test/: test_authservice.cpp  test_converter.cpp  test_jsondb.cpp  test_main.cpp  test_operation_builder.cpp  test_reservationservice.cpp  test_roomservice.cpp  test_userservice.cpp
